# sdl-cpp-starter-project

./: CMakeLists.txt  readme.adoc  settings.gradle
app/: build.gradle
app/src/main/cpp/: Game.h  Main.cpp
lib/: libSDL2.dylib
src/main/cpp/: Game.cpp
src/main/headers/: Game.h  app.h
